Add openai and click dependencies in setup.cfg
- Add `openai~=1.3.5` and `click~=8.1.7` to the `install_requires` section in `setup.cfg`
- Add a new console script `ai-commit` which will run the `main` function in `ai_commit.py`
- Remove the unused `skeleton.py` file in `src/ai_commit`
- Remove the unused `conftest.py` and `test_skeleton.py` files in `tests/` directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    openai~=1.3.5
+    click~=8.1.7
 
 
 [options.packages.find]
@@ -68,6 +70,8 @@ testing =
     pytest-cov
 
 [options.entry_points]
+console_scripts =
+    ai-commit = ai_commit.ai_commit:main
 # Add here console scripts like:
 # console_scripts =
 #     script_name = ai_commit.module:function
